crates/parser/src/snapshots/parser__tests__parse_inline_err@0007_check_arm_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "check { foo => bar\n| baz => }\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0007_check_arm_no_expr.ath
---
CHECK_EXPR
  CHECK_KW "check"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  CHECK_ARM
    IDENT_EXPR
      NAME_REF
        IDENT "foo"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "bar"
  WHITESPACE "\n"
  CHECK_ARM
    PIPE "|"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "baz"
    WHITESPACE " "
    FAT_ARROW "=>"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 27: Expected a check arm body

