crates/parser/src/snapshots/parser__tests__parse_inline_err@0010_set_expr_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "set! foo\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0010_set_expr_no_phrase.ath
---
SET_EXPR
  SETBANG_KW "set!"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE "\n"
error 8: Expected to find a value (phrase) for the set! expression

