crates/parser/src/snapshots/parser__tests__parse_inline_err@0026_let_part_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "let { a := b; := c } a\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0026_let_part_no_pat.ath
---
LET_EXPR
  LET_KW "let"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_PART
    IDENT_PAT
      NAME
        IDENT "a"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "b"
  LET_PART
    SEMI ";"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "c"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "a"
  WHITESPACE "\n"
error 13: Expected to find a pattern for the let binding

