crates/parser/src/snapshots/parser__tests__parse_inline_err@0049_assume_part_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "assume a :=\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0049_assume_part_no_phrase.ath
---
NAMED_ASSUME_DED
  ASSUME_KW "assume"
  WHITESPACE " "
  ASSUME_PART
    NAME
      IDENT "a"
    WHITESPACE " "
    COLON_EQ ":="
  WHITESPACE "\n"
error 11: expected phrase in assume binding
error 11: expected body for assumption

