crates/parser/src/snapshots/parser__tests__parse_inline_err@0056_let_rec_expr_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "letrec { a := b; c := d }\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0056_let_rec_expr_no_body.ath
---
LET_REC_EXPR
  LETREC_KW "letrec"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_REC_PART
    NAME
      IDENT "a"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "b"
  LET_REC_PART
    SEMI ";"
    WHITESPACE " "
    NAME
      IDENT "c"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "d"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 25: Expected a letrec body

