crates/parser/src/snapshots/parser__tests__parse_inline_err@0092_declare_no_ret_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare foo : [Int] ->\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0092_declare_no_ret_sort.ath
---
INFIX_DECLARE_DIR
  DECLARE_KW "declare"
  WHITESPACE " "
  NAME
    IDENT "foo"
  WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  FUNC_SORTS
    L_BRACK "["
    IDENT_SORT
      NAME_REF
        IDENT "Int"
    R_BRACK "]"
  WHITESPACE " "
  THIN_ARROW "->"
  WHITESPACE "\n"
error 22: expected function return sort

