crates/parser/src/snapshots/parser__tests__parse_inline_err@0103_assert_no_name.ath.snap
---
source: crates/parser/src/tests.rs
description: "assert := true\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0103_assert_no_name.ath
---
INFIX_ASSERT_DIR
  ASSERT_KW "assert"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "true"
  WHITESPACE "\n"
error 6: expected identifier for the assertion

