crates/parser/src/snapshots/parser__tests__parse_inline_err@0104_assert_closed_no_name.ath.snap
---
source: crates/parser/src/tests.rs
description: "assert* := true\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0104_assert_closed_no_name.ath
---
ASSERT_CLOSED_DIR
  ASSERT_STAR_KW "assert*"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "true"
  WHITESPACE "\n"
error 7: expected identifier for the closed assertion

